--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Chuyển Văn Bản Thành Giọng Nói - Nhật Đăng</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
 
     * {
       box-sizing: border-box;
@@ -25,11 +25,11 @@
     .scene {
       position: relative;
       width: 460px;
-      min-height: 650px;
+      min-height: 700px;
       background: #d7f0d9;
       border-radius: 30px;
       box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-      padding: 40px 30px 60px 30px;
+      padding: 40px 30px 100px 30px;
       overflow: hidden;
     }
 
@@ -40,6 +40,8 @@
       text-align: center;
       margin-bottom: 25px;
       text-shadow: 1px 1px 2px #a4d06f;
+      position: relative;
+      z-index: 2;
     }
 
     label {
@@ -47,7 +49,7 @@
       font-size: 15px;
       font-weight: 600;
       display: block;
-      margin-bottom: 8px;
+      margin: 15px 0 8px;
     }
 
     input[type="text"], textarea {
@@ -71,81 +73,84 @@
     }
 
     button {
-      margin-top: 20px;
-      width: 100%;
-      padding: 14px;
-      font-size: 18px;
+      padding: 12px 16px;
+      font-size: 14px;
       font-weight: 700;
       color: white;
       background: linear-gradient(90deg, #7ec850, #4a7f23);
       border: none;
-      border-radius: 22px;
+      border-radius: 20px;
       cursor: pointer;
-      box-shadow: 0 6px 12px rgba(74, 127, 35, 0.6);
-      transition: background 0.3s ease;
+      box-shadow: 0 4px 8px rgba(74, 127, 35, 0.5);
+      font-family: 'Comfortaa', cursive;
     }
 
     button:hover {
       background: linear-gradient(90deg, #5a8b28, #3b5e18);
     }
 
-    .tree, .cloud, .bush, .rabbit {
+    .tree, .cloud, .bush, .rabbit, .bird {
       position: absolute;
-    }
-
-    .tree {
-      bottom: 0; left: 15px; width: 60px; height: 100px;
-      background: linear-gradient(to top, #387d3b, #70b252);
-      border-radius: 30px 30px 10px 10px;
-      box-shadow: inset -8px 0 10px #2e6231;
-    }
-
-    .tree::before {
-      content: ""; bottom: 100%; left: 50%; transform: translateX(-50%);
-      width: 90px; height: 70px;
-      background: linear-gradient(to top, #63b549, #a3d76b);
-      border-radius: 50% 50% 40% 40% / 60% 60% 40% 40%;
-      box-shadow: 0 5px 15px rgba(95, 163, 65, 0.4);
     }
 
     .cloud {
-      top: 25px; right: 35px; width: 130px; height: 60px;
-      background: #fff; border-radius: 50px;
+      top: 20px;
+      left: -200px;
+      width: 130px;
+      height: 60px;
+      background: #fff;
+      border-radius: 50px;
       box-shadow: 30px 0 white, 60px 10px white, 90px 0 white;
-      opacity: 0.85; animation: drift 30s linear infinite;
+      opacity: 0.85;
+      animation: drift 60s linear infinite;
+      z-index: 0;
     }
 
     @keyframes drift {
-      0% { right: 35px; }
-      100% { right: 400px; }
+      0% { transform: translateX(0); }
+      100% { transform: translateX(1200px); }
     }
 
-    .bush {
-      bottom: 15px; right: 25px; width: 70px; height: 40px;
-      background: linear-gradient(to top, #4a7f23, #7ec850);
-      border-radius: 50% / 100%;
-      box-shadow: inset -8px 0 12px #3b5e18;
+    .corner-links {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      right: 20px;
+      display: flex;
+      justify-content: space-between;
+      z-index: 999;
     }
 
-    .rabbit {
-      bottom: 70px; left: 140px; width: 60px; height: 60px;
-      background: #f5f5f5;
-      border-radius: 50% 50% 40% 40% / 60% 60% 40% 40%;
-      box-shadow: inset 0 5px 10px #dcdcdc;
+    .corner-links a,
+    .corner-links button {
+      font-size: 14px;
+      padding: 8px 12px;
+      border-radius: 20px;
+      background: #fff;
+      border: 2px solid #7ec850;
+      color: #2b5329;
+      font-weight: 700;
+      text-decoration: none;
     }
 
-    .rabbit::before, .rabbit::after {
-      content: ""; position: absolute; top: 10px; width: 12px; height: 30px;
-      background: #f5f5f5;
-      border-radius: 60% 60% 30% 30% / 90% 90% 40% 40%;
+    .top-left-controls {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      z-index: 9999;
+      display: flex;
+      align-items: center;
+      gap: 8px;
     }
 
-    .rabbit::before { left: 10px; transform: rotate(-15deg); }
-    .rabbit::after { right: 10px; transform: rotate(15deg); }
+    .top-left-controls button {
+      padding: 10px 12px;
+    }
 
     #sharePopup {
-      position: absolute;
-      bottom: 20px; left: 50%; transform: translateX(-50%);
+      position: fixed;
+      bottom: 70px;
+      right: 20px;
       background: white;
       border: 2px solid #7ec850;
       border-radius: 12px;
@@ -154,6 +159,14 @@
       font-size: 14px;
       color: #2b5329;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      z-index: 9999;
+    }
+
+    #sharePopup button {
+      width: auto;
+      margin-top: 10px;
+      font-size: 14px;
+      padding: 8px 12px;
     }
   </style>
 </head>
@@ -161,6 +174,11 @@
   <audio autoplay loop>
     <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_4e8703aef4.mp3" type="audio/mpeg">
   </audio>
+
+  <div class="top-left-controls">
+    <button onclick="speakNow()">🔊</button>
+    <input type="range" min="0" max="1" step="0.01" value="1" id="volumeControl" title="Âm lượng" />
+  </div>
 
   <div class="scene">
     <h1>Chuyển Văn Bản Thành Giọng Nói - Nhật Đăng</h1>
@@ -173,13 +191,27 @@
 
     <button id="ttsBtn">Chuyển văn bản thành giọng nói</button>
     <button id="downloadBtn">Tải âm thanh</button>
-    <button id="shareBtn">Chia sẻ</button>
-    <div id="sharePopup">Trang web Chuyển Văn Bản Thành Giọng Nói - Nhật Đăng:<br><a href="https://nhatdang-0.github.io/chuyen-van-ban-thanh-giong-noi" target="_blank">https://nhatdang-0.github.io/chuyen-van-ban-thanh-giong-noi</a></div>
 
-    <div class="tree"></div>
+    <div class="corner-links">
+      <a href="https://nhatdang-0.github.io" target="_blank"><strong>Trang Chủ</strong></a>
+      <button id="shareBtn">🔗</button>
+    </div>
+
+    <div id="sharePopup">
+      <div>Trang web:</div>
+      <a href="https://nhatdang-0.github.io/chuyen-van-ban-thanh-giong-noi" target="_blank">https://nhatdang-0.github.io/...</a>
+      <button onclick="copyLink()">Sao chép liên kết</button>
+    </div>
+
+    <div class="tree" style="left: 20px;"></div>
+    <div class="tree" style="right: 30px;"></div>
+    <div class="bush" style="right: 80px;"></div>
+    <div class="bush" style="left: 60px;"></div>
+    <div class="rabbit" style="left: 140px;"></div>
+    <div class="rabbit" style="right: 120px;"></div>
     <div class="cloud"></div>
-    <div class="bush"></div>
-    <div class="rabbit"></div>
+
+    <footer class="footer">© 2025 Nhật Đăng. All rights reserved.</footer>
   </div>
 
   <script>
@@ -187,22 +219,34 @@
     const downloadBtn = document.getElementById('downloadBtn');
     const shareBtn = document.getElementById('shareBtn');
     const sharePopup = document.getElementById('sharePopup');
-
     const inputText = document.getElementById('inputText');
     const fileNameInput = document.getElementById('fileName');
+    const volumeControl = document.getElementById('volumeControl');
+
+    let utterance;
 
     ttsBtn.addEventListener('click', () => {
       const text = inputText.value.trim();
       const fileName = fileNameInput.value.trim();
-
       if (!fileName || !text) {
         alert('Vui lòng nhập tên file và văn bản!');
         return;
       }
+      speakNow();
+    });
 
-      const utterance = new SpeechSynthesisUtterance(text);
+    function speakNow() {
+      const text = inputText.value.trim();
+      if (!text) return;
+      if (utterance) speechSynthesis.cancel();
+      utterance = new SpeechSynthesisUtterance(text);
       utterance.lang = 'vi-VN';
+      utterance.volume = parseFloat(volumeControl.value);
       speechSynthesis.speak(utterance);
+    }
+
+    volumeControl.addEventListener('input', () => {
+      if (utterance) utterance.volume = parseFloat(volumeControl.value);
     });
 
     downloadBtn.addEventListener('click', () => {
@@ -212,7 +256,6 @@
         alert('Vui lòng nhập tên file và văn bản!');
         return;
       }
-
       const blob = new Blob([text], { type: 'text/plain' });
       const a = document.createElement('a');
       a.href = URL.createObjectURL(blob);
@@ -223,6 +266,13 @@
     shareBtn.addEventListener('click', () => {
       sharePopup.style.display = sharePopup.style.display === 'block' ? 'none' : 'block';
     });
+
+    function copyLink() {
+      const url = 'https://nhatdang-0.github.io/chuyen-van-ban-thanh-giong-noi';
+      navigator.clipboard.writeText(url).then(() => {
+        alert('Liên kết đã được sao chép!');
+      });
+    }
   </script>
 </body>
 </html>
