--- a/index.html
+++ b/index.html
@@ -72,21 +72,38 @@
       border-color: #5a8b28;
     }
 
+    /* Các nút chỉnh màu nền gradient xanh dương sang hồng pastel nhẹ */
     button {
       padding: 12px 16px;
       font-size: 14px;
       font-weight: 700;
       color: white;
-      background: linear-gradient(90deg, #7ec850, #4a7f23);
-      border: none;
+      background: linear-gradient(90deg, #6a89cc, #f78fb3);
+      border: 1px solid black;
       border-radius: 20px;
       cursor: pointer;
-      box-shadow: 0 4px 8px rgba(74, 127, 35, 0.5);
+      box-shadow: 0 4px 8px rgba(74, 127, 35, 0.3);
       font-family: 'Comfortaa', cursive;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      transition: background 0.3s ease;
     }
 
     button:hover {
-      background: linear-gradient(90deg, #5a8b28, #3b5e18);
+      background: linear-gradient(90deg, #5a6bbc, #e66a96);
+    }
+
+    /* Riêng 2 nút chính tách biệt */
+    #ttsBtn {
+      display: block;
+      width: 100%;
+      margin-bottom: 15px;
+    }
+
+    #downloadBtn {
+      display: block;
+      width: 100%;
     }
 
     .tree, .cloud, .bush, .rabbit, .bird {
@@ -113,26 +130,38 @@
 
     .corner-links {
       position: fixed;
-      bottom: 20px;
+      bottom: 60px; /* lùi xuống hơn trước */
       left: 20px;
       right: 20px;
       display: flex;
       justify-content: space-between;
       z-index: 999;
+      font-size: 17px; /* to hơn chút */
     }
 
     .corner-links a,
     .corner-links button {
-      font-size: 14px;
-      padding: 8px 12px;
+      font-size: 17px;
+      padding: 10px 16px;
       border-radius: 20px;
-      background: #fff;
-      border: 2px solid #7ec850;
-      color: #2b5329;
+      background: linear-gradient(90deg, #6a89cc, #f78fb3);
+      border: 1px solid black;
+      color: white;
       font-weight: 700;
       text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      cursor: pointer;
+      transition: background 0.3s ease;
     }
 
+    .corner-links a:hover,
+    .corner-links button:hover {
+      background: linear-gradient(90deg, #5a6bbc, #e66a96);
+    }
+
+    /* Icon nút phát nhạc mềm mại kiểu youtube */
     .top-left-controls {
       position: fixed;
       top: 10px;
@@ -143,40 +172,90 @@
       gap: 8px;
     }
 
-    .top-left-controls button {
-      padding: 10px 12px;
+    #playPauseBtn {
+      background: linear-gradient(90deg, #6a89cc, #f78fb3);
+      border: 1px solid black;
+      border-radius: 50%;
+      width: 44px;
+      height: 44px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      transition: background 0.3s ease;
     }
 
-    #sharePopup {
-      position: fixed;
-      bottom: 70px;
-      right: 20px;
-      background: white;
-      border: 2px solid #7ec850;
-      border-radius: 12px;
-      padding: 10px 15px;
+    #playPauseBtn:hover {
+      background: linear-gradient(90deg, #5a6bbc, #e66a96);
+    }
+
+    /* Icon hình tam giác mềm mại */
+    #playIcon {
+      width: 0; 
+      height: 0; 
+      border-top: 10px solid transparent;
+      border-bottom: 10px solid transparent; 
+      border-left: 16px solid white;
+      margin-left: 3px;
+    }
+
+    /* Icon pause */
+    #pauseIcon {
       display: none;
-      font-size: 14px;
-      color: #2b5329;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      z-index: 9999;
+      width: 12px;
+      height: 16px;
+      position: relative;
+    }
+    #pauseIcon::before, #pauseIcon::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      width: 4px;
+      height: 100%;
+      background: white;
+      border-radius: 2px;
+    }
+    #pauseIcon::before {
+      left: 0;
+    }
+    #pauseIcon::after {
+      right: 0;
     }
 
-    #sharePopup button {
-      width: auto;
-      margin-top: 10px;
-      font-size: 14px;
-      padding: 8px 12px;
+    #volumeControl {
+      width: 100px;
+      cursor: pointer;
+      opacity: 0.7;
+      transition: opacity 0.3s ease;
     }
+    #volumeControl:hover {
+      opacity: 1;
+    }
+
+    /* Footer lùi xuống thấp hơn, canh giữa ngang */
+    footer.footer {
+      position: absolute;
+      bottom: 10px;
+      width: 100%;
+      text-align: center;
+      color: #2b5329;
+      font-size: 14px;
+      font-weight: 600;
+      user-select: none;
+    }
+
   </style>
 </head>
 <body>
-  <audio autoplay loop>
-    <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_4e8703aef4.mp3" type="audio/mpeg">
+  <audio loop>
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg" />
   </audio>
 
   <div class="top-left-controls">
-    <button onclick="speakNow()">🔊</button>
+    <button id="playPauseBtn" aria-label="Phát/Dừng nhạc">
+      <div id="playIcon"></div>
+      <div id="pauseIcon"></div>
+    </button>
     <input type="range" min="0" max="1" step="0.01" value="1" id="volumeControl" title="Âm lượng" />
   </div>
 
@@ -193,14 +272,20 @@
     <button id="downloadBtn">Tải âm thanh</button>
 
     <div class="corner-links">
-      <a href="https://nhatdang-0.github.io" target="_blank"><strong>Trang Chủ</strong></a>
-      <button id="shareBtn">🔗</button>
-    </div>
-
-    <div id="sharePopup">
-      <div>Trang web:</div>
-      <a href="https://nhatdang-0.github.io/chuyen-van-ban-thanh-giong-noi" target="_blank">https://nhatdang-0.github.io/...</a>
-      <button onclick="copyLink()">Sao chép liên kết</button>
+      <a href="https://nhatdang-0.github.io" target="_blank" aria-label="Trang Chủ">
+        <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" fill="white" viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
+        Trang Chủ
+      </a>
+      <button id="shareBtn" aria-label="Chia sẻ">
+        <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" fill="white" viewBox="0 0 24 24">
+          <circle cx="18" cy="5" r="3"/>
+          <circle cx="6" cy="12" r="3"/>
+          <circle cx="18" cy="19" r="3"/>
+          <line x1="8.59" y1="13.51" x2="15.42" y2="17.49" stroke="white" stroke-width="2"/>
+          <line x1="15.41" y1="6.51" x2="8.59" y2="10.49" stroke="white" stroke-width="2"/>
+        </svg>
+        Chia sẻ
+      </button>
     </div>
 
     <div class="tree" style="left: 20px;"></div>
@@ -215,82 +300,32 @@
   </div>
 
   <script>
-    const ttsBtn = document.getElementById('ttsBtn');
-    const downloadBtn = document.getElementById('downloadBtn');
-    const shareBtn = document.getElementById('shareBtn');
-    const sharePopup = document.getElementById('sharePopup');
-    const inputText = document.getElementById('inputText');
-    const fileNameInput = document.getElementById('fileName');
+    const audio = new Audio('https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3'); // Thay link nhạc
+    audio.loop = true;
+    audio.volume = document.getElementById('volumeControl').value;
+
+    const playPauseBtn = document.getElementById('playPauseBtn');
+    const playIcon = document.getElementById('playIcon');
+    const pauseIcon = document.getElementById('pauseIcon');
     const volumeControl = document.getElementById('volumeControl');
 
-    let utterance;
-
-    const apiKey = '808e8232fd2b492db9681809734cc6de'; // API key VoiceRSS của bạn
-
-    ttsBtn.addEventListener('click', () => {
-      const text = inputText.value.trim();
-      const fileName = fileNameInput.value.trim();
-      if (!fileName || !text) {
-        alert('Vui lòng nhập tên file và văn bản!');
-        return;
+    playPauseBtn.addEventListener('click', () => {
+      if (audio.paused) {
+        audio.play();
+        playIcon.style.display = 'none';
+        pauseIcon.style.display = 'block';
+      } else {
+        audio.pause();
+        playIcon.style.display = 'block';
+        pauseIcon.style.display = 'none';
       }
-      speakNow();
     });
-
-    function speakNow() {
-      const text = inputText.value.trim();
-      if (!text) return;
-      if (utterance) speechSynthesis.cancel();
-      utterance = new SpeechSynthesisUtterance(text);
-      utterance.lang = 'vi-VN';
-      utterance.volume = parseFloat(volumeControl.value);
-      speechSynthesis.speak(utterance);
-    }
 
     volumeControl.addEventListener('input', () => {
-      if (utterance) utterance.volume = parseFloat(volumeControl.value);
+      audio.volume = volumeControl.value;
     });
 
-    async function downloadMP3FromVoiceRSS(text, fileName) {
-      if (!text || !fileName) {
-        alert('Vui lòng nhập tên file và văn bản!');
-        return;
-      }
-
-      const url = `https://api.voicerss.org/?key=${apiKey}&hl=vi-vn&c=MP3&f=48khz_16bit_stereo&src=${encodeURIComponent(text)}`;
-
-      try {
-        const response = await fetch(url);
-        if (!response.ok) throw new Error('Lỗi tải âm thanh');
-
-        const blob = await response.blob();
-        const audioUrl = URL.createObjectURL(blob);
-        const a = document.createElement('a');
-        a.href = audioUrl;
-        a.download = `${fileName}.mp3`;
-        a.click();
-      } catch (err) {
-        alert('Không thể tạo file âm thanh. Vui lòng thử lại!');
-        console.error(err);
-      }
-    }
-
-    downloadBtn.addEventListener('click', () => {
-      const fileName = fileNameInput.value.trim();
-      const text = inputText.value.trim();
-      downloadMP3FromVoiceRSS(text, fileName);
-    });
-
-    shareBtn.addEventListener('click', () => {
-      sharePopup.style.display = sharePopup.style.display === 'block' ? 'none' : 'block';
-    });
-
-    function copyLink() {
-      const url = 'https://nhatdang-0.github.io/chuyen-van-ban-thanh-giong-noi';
-      navigator.clipboard.writeText(url).then(() => {
-        alert('Liên kết đã được sao chép!');
-      });
-    }
+    // Các nút khác chưa gán chức năng để bạn tiện thêm
   </script>
 </body>
 </html>
