--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
     footer.footer {
       position: absolute;
       bottom: 10px;
+      left: 0;
       width: 100%;
       text-align: center;
       color: #2b5329;
