--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
       display: block;
       width: 100%;
       margin-bottom: 15px;
+      margin-top: 15px; /* Đã thêm dòng này để giãn cách với textarea */
     }
 
     #downloadBtn {
@@ -236,7 +237,6 @@
     footer.footer {
       position: absolute;
       bottom: 10px;
-      left: 0;
       width: 100%;
       text-align: center;
       color: #2b5329;
