--- a/index.html
+++ b/index.html
@@ -297,21 +297,25 @@
       transition: opacity 0.5s ease;
     }
 
+    <div id="copyMessage">
+      Đã sao chép nội dung chia sẻ vào bộ nhớ tạm!
+    </div>
+
     #copyMessage {
       position: fixed;
-      top: 20%;
+      top: 60%;
       left: 50%;
-      transform: translateX(-50%);
-      background: rgba(106, 137, 204, 0.9); /* màu nền xanh pastel nhẹ */
+      transform: translate(-50%, -50%);
+      background: rgba(106, 137, 204, 0.9); /* màu xanh nhẹ khác biệt với welcome */
       padding: 20px 30px;
       border-radius: 18px;
-      font-size: 16px;
+      font-size: 17px;
       font-weight: 700;
       color: white;
       text-align: center;
       font-family: 'Comfortaa', cursive, sans-serif;
-      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
-      z-index: 99998;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+      z-index: 99999;
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.5s ease;
@@ -377,6 +381,22 @@
 
   audio.volume = volumeControl.value;
 
+  // Xử lý chuyển văn bản thành giọng nói
+  const ttsBtn = document.getElementById('ttsBtn');
+  const inputText = document.getElementById('inputText');
+
+  ttsBtn.addEventListener('click', () => {
+    const text = inputText.value.trim();
+    if (!text) {
+      alert("Vui lòng nhập văn bản trước khi chuyển đổi.");
+      return;
+    }
+
+    const utterance = new SpeechSynthesisUtterance(text);
+    utterance.lang = 'vi-VN'; // Ngôn ngữ tiếng Việt
+    speechSynthesis.speak(utterance);
+  });
+
   // Gán sự kiện play/pause cho nút
   playPauseBtn.addEventListener('click', () => {
     if (audio.paused) {
@@ -425,7 +445,7 @@
     });
   });
 
-  // Hiển thị thông báo chào mừng  giây
+  // Hiển thị thông báo chào mừng 3 giây
   window.addEventListener('load', () => {
     const welcome = document.getElementById('welcomeMessage');
     welcome.style.opacity = '1';
@@ -438,9 +458,6 @@
   <div id="welcomeMessage">
     ND Co., Ltd cảm ơn bạn đã sử dụng trang web!<br />
     Trang web có nhạc nền, bạn hãy mở lên và thưởng thức nhé.
-  </div>
-  <div id="copyMessage">
-    Đã sao chép nội dung chia sẻ vào bộ nhớ tạm!
   </div>
 </body>
 </html>
