--- a/index.html
+++ b/index.html
@@ -340,13 +340,29 @@
       <h1>Chuyển Văn Bản Thành Giọng Nói - Nhật Đăng</h1>
 
       <label for="fileName">Tên file:</label>
-      <input type="text" id="fileName" placeholder="Nhập tên file (không có đuôi)..." />
-
+      <input
+        type="text"
+        id="fileName"
+        placeholder="Chức năng tải âm thanh chưa phát triển, bạn không cần nhập tên file."
+        disabled
+      />
+      <p style="font-size: 13px; color: gray; font-style: italic; margin-top: 4px; margin-bottom: 12px;">
+        (Chức năng tải âm thanh chưa hỗ trợ, nên bạn không cần nhập tên file.)
+      </p>
+      
       <label for="inputText">Nhập văn bản:</label>
       <textarea id="inputText" placeholder="Nhập văn bản vào đây..."></textarea>
 
       <button id="ttsBtn">Chuyển văn bản thành giọng nói</button>
-      <p style="color: gray; font-size: 14px; margin-top: 10px; font-style: italic;">
+
+      <!-- Nút tải âm thanh bị khóa với giải thích -->
+      <button id="downloadBtn" disabled
+        style="margin-top: 10px; width: 100%; padding: 12px 16px; font-size: 14px; font-weight: 700; 
+               color: white; background: gray; border: 1px solid black; border-radius: 20px; cursor: not-allowed;"
+        title="Chức năng tải âm thanh chưa phát triển, tạm thời bị khóa">
+        Tải âm thanh (chưa khả dụng)
+      </button>
+      <p style="color: gray; font-size: 14px; margin-top: 8px; font-style: italic;">
         Chúng tôi chưa hỗ trợ tải âm thanh. Bạn có thể ghi màn hình rồi tách âm thanh ra.<br>
         Chúng tôi chân thành xin lỗi vì sự bất tiện này!
       </p>
@@ -449,7 +465,7 @@
     });
   });
 
-  // Hiển thị thông báo chào mừng 3 giây
+  // Hiển thị thông báo chào mừng  giây
   window.addEventListener('load', () => {
     const welcome = document.getElementById('welcomeMessage');
     welcome.style.opacity = '1';
