--- a/index.html
+++ b/index.html
@@ -340,7 +340,17 @@
       <h1>Chuyển Văn Bản Thành Giọng Nói - Nhật Đăng</h1>
 
       <label for="fileName">Tên file:</label>
-      <!--
+      <input
+        type="text"
+        id="fileName"
+        placeholder="Chức năng tải âm thanh chưa phát triển, bạn không cần nhập tên file."
+        disabled
+      />
+      <p style="font-size: 13px; color: gray; font-style: italic; margin-top: 4px; margin-bottom: 12px;">
+        (Chức năng tải âm thanh chưa hỗ trợ nên bạn không cần nhập tên file.)
+      </p>
+      <!-- Code mở khóa ô văn bản:
+      <label for="fileName">Tên file:</label>
       <input
         type="text"
         id="fileName"
@@ -349,15 +359,6 @@
         title="Nhập tên file để tải âm thanh về với tên được nhập"
       />
       -->
-      <input
-        type="text"
-        id="fileName"
-        placeholder="Chức năng tải âm thanh chưa phát triển, bạn không cần nhập tên file."
-        disabled
-      />
-      <p style="font-size: 13px; color: gray; font-style: italic; margin-top: 4px; margin-bottom: 12px;">
-        (Chức năng tải âm thanh chưa hỗ trợ, nên bạn không cần nhập tên file.)
-      </p>
       
       <label for="inputText">Nhập văn bản:</label>
       <textarea id="inputText" placeholder="Nhập văn bản vào đây..."></textarea>
@@ -375,7 +376,7 @@
         Chúng tôi chưa hỗ trợ tải âm thanh. Bạn có thể ghi màn hình rồi tách âm thanh ra.<br>
         Chúng tôi chân thành xin lỗi vì sự bất tiện này!
       </p>
-      <!-- ode mở khóa nút:
+      <!-- Code mở khóa nút:
       <button id="downloadBtn" 
         style="margin-top: 10px; width: 100%; padding: 12px 16px; font-size: 14px; font-weight: 700; 
                color: white; background: linear-gradient(90deg, #6a89cc, #f78fb3); border: 1px solid black; 
@@ -471,7 +472,7 @@
 
   // Nút chia sẻ
   shareBtn.addEventListener('click', () => {
-    const text = "Trang web Chuyển Văn Bản Thành Giọng Nói - Nhật Đăng thuộc ND Co., Ltd: https://nhatdang-0.github.io/chuyen-van-ban-thanh-giong-noi/";
+    const text = "Trang web Chuyển Văn Bản Thành Giọng Nói - Nhật Đăng thuộc ND Co., Ltd: https://nhatdang-0.github.io/chuyen-van-ban-thanh-giong-noi/\nTrang chủ của ND Co., Ltd: https://nhatdang-0.github.io/";
     navigator.clipboard.writeText(text).then(() => {
       const copyMsg = document.getElementById('copyMessage');
       copyMsg.style.opacity = '1';
