--- a/index.html
+++ b/index.html
@@ -339,18 +339,18 @@
     <div class="scene">
       <h1>Chuyển Văn Bản Thành Giọng Nói - Nhật Đăng</h1>
 
-      <label for="fileName">Tên file:</label>
+      <label for="fileName">Nhập tên file:</label>
       <input
         type="text"
         id="fileName"
-        placeholder="Chức năng tải âm thanh chưa phát triển, bạn không cần nhập tên file."
+        placeholder="Nhập tên file (không có đuôi)..."
         disabled
       />
       <p style="font-size: 13px; color: gray; font-style: italic; margin-top: 4px; margin-bottom: 12px;">
         (Chức năng tải âm thanh chưa hỗ trợ nên bạn không cần nhập tên file.)
       </p>
       <!-- Code mở khóa ô văn bản:
-      <label for="fileName">Tên file:</label>
+      <label for="fileName">Nhập tên file:</label>
       <input
         type="text"
         id="fileName"
