--- a/index.html
+++ b/index.html
@@ -297,10 +297,6 @@
       transition: opacity 0.5s ease;
     }
 
-    <div id="copyMessage">
-      Đã sao chép nội dung chia sẻ vào bộ nhớ tạm!
-    </div>
-
     #copyMessage {
       position: fixed;
       top: 60%;
@@ -411,6 +407,7 @@
   </div>
 
 <script>
+  const shareBtn = document.getElementById('shareBtn');
   const audio = document.getElementById('backgroundAudio');
   const playPauseBtn = document.getElementById('playPauseBtn');
   const playIcon = document.getElementById('playIcon');
@@ -497,6 +494,10 @@
   <div id="welcomeMessage">
     ND Co., Ltd cảm ơn bạn đã sử dụng trang web!<br />
     Trang web có nhạc nền, bạn hãy mở lên và thưởng thức nhé.
+  </div>
+
+  <div id="copyMessage">
+    Đã sao chép nội dung chia sẻ vào bộ nhớ tạm!
   </div>
 </body>
 </html>
