--- a/index.html
+++ b/index.html
@@ -294,47 +294,37 @@
       z-index: 100000;
       opacity: 0;
       pointer-events: none;
-      transition: opacity 0.5s ease;
+      transition: opacity 0.4s ease, transform 0.4s ease;
     }
 
-    #copyMessage {
-      position: fixed;
-      top: 60%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(106, 137, 204, 0.9); /* màu xanh nhẹ khác biệt với welcome */
-      padding: 20px 30px;
-      border-radius: 18px;
-      font-size: 17px;
-      font-weight: 700;
-      color: white;
-      text-align: center;
-      font-family: 'Comfortaa', cursive, sans-serif;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-      z-index: 99998;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.5s ease;
+    #welcomeMessage.show {
+      opacity: 1;
+      visibility: visible;
+      transform: translate(-50%, -50%) scale(1.02);
     }
 
+    #copyMessage,
     #copyFailMessage {
       position: fixed;
-      top: 60%;
+      top: calc(40% + 120px); /* Dưới bảng welcome khoảng 120px */
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(255, 100, 100, 0.9); /* màu đỏ nhạt cho lỗi */
-      padding: 20px 30px;
-      border-radius: 18px;
-      font-size: 17px;
-      font-weight: 700;
+      background: rgba(0, 0, 0, 0.85);
       color: white;
-      text-align: center;
-      font-family: 'Comfortaa', cursive, sans-serif;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-      z-index: 99998;
+      padding: 12px 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.5s ease;
+      visibility: hidden;
+      z-index: 99998;
+      transition: opacity 0.4s ease, transform 0.4s ease;
+    }
+
+    #copyMessage.show,
+    #copyFailMessage.show {
+      opacity: 1;
+      visibility: visible;
+      transform: translate(-50%, -50%) scale(1.02);
     }
   </style>
 </head>
