--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
     #copyMessage,
     #copyFailMessage {
       position: fixed;
-      top: calc(40% + 120px); /* Dưới bảng welcome khoảng 120px */
+      top: calc(550% + 120px); /* Dưới bảng welcome khoảng 120px */
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.85);
+      background: #a3cef1;
       color: white;
       padding: 12px 20px;
       border-radius: 10px;
