--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
       top: calc(50% + 120px); /* Dưới bảng welcome khoảng 120px */
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(173, 216, 230, 0.99); /* xanh dương pastel trong suốt */
+      background: rgba(173, 180, 255, 0.9); /* xanh dương pastel trong suốt */
+      backdrop-filter: blur(4px)
       color: white;
       padding: 12px 20px;
       border-radius: 10px;
