--- a/index.html
+++ b/index.html
@@ -309,12 +309,15 @@
       top: calc(50% + 120px); /* Dưới bảng welcome khoảng 120px */
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(106, 137, 204, 0.9); /* xanh dương pastel trong suốt */
-      backdrop-filter: blur(4px)
+      background: rgba(106, 137, 204, 0.9); /* màu xanh nhẹ khác biệt với welcome */
+      padding: 20px 30px;
+      border-radius: 18px;
+      font-size: 17px;
+      font-weight: 700;
       color: white;
-      padding: 12px 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      text-align: center;
+      font-family: 'Comfortaa', cursive, sans-serif;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
       opacity: 0;
       visibility: hidden;
       z-index: 99998;
