--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
     #copyMessage,
     #copyFailMessage {
       position: fixed;
-      top: calc(50% + 120px); /* Dưới bảng welcome khoảng 120px */
+      top: 60%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      transform: translate(-50%, 0);
       background: rgba(106, 137, 204, 0.9); /* màu xanh nhẹ khác biệt với welcome */
       padding: 20px 30px;
       border-radius: 18px;
