--- a/index.html
+++ b/index.html
@@ -277,46 +277,58 @@
       }
     }
 
-    #messageContainer {
+    #welcomeMessage {
       position: fixed;
-      top: 15%;
+      top: 50%;
       left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px; /* Khoảng cách giữa các thông báo */
-      z-index: 100000;
-      pointer-events: none;
-    }
-
-    #welcomeMessage,
-    #copyMessage,
-    #copyFailMessage {
-      background: rgba(247, 143, 179, 0.9);
-      padding: 20px 30px;
+      transform: translate(-50%, -50%);
+      background: rgba(247, 143, 179, 0.9); /* màu hồng pastel của trang web có độ trong suốt */
+      padding: 30px 40px;
       border-radius: 20px;
       font-size: 18px;
       font-weight: 700;
       color: white;
+      text-align: center;
       font-family: 'Comfortaa', cursive, sans-serif;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+      z-index: 100000;
       opacity: 0;
-      visibility: hidden;
+      pointer-events: none;
       transition: opacity 0.4s ease, transform 0.4s ease;
     }
-  
-    #welcomeMessage.show,
-    #copyMessage.show,
-    #copyFailMessage.show {
+
+    #welcomeMessage.show {
       opacity: 1;
       visibility: visible;
-      transform: scale(1.02);
+      transform: translate(-50%, -50%) scale(1.02);
     }
 
     #copyMessage,
     #copyFailMessage {
-      background: rgba(106, 137, 204, 0.9);
+      position: fixed;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, 0);
+      background: rgba(106, 137, 204, 0.9); /* màu xanh nhẹ khác biệt với welcome */
+      padding: 20px 30px;
+      border-radius: 18px;
+      font-size: 17px;
+      font-weight: 700;
+      color: white;
+      text-align: center;
+      font-family: 'Comfortaa', cursive, sans-serif;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+      opacity: 0;
+      visibility: hidden;
+      z-index: 99998;
+      transition: opacity 0.4s ease, transform 0.4s ease;
+    }
+
+    #copyMessage.show,
+    #copyFailMessage.show {
+      opacity: 1;
+      visibility: visible;
+      transform: translate(-50%, -50%) scale(1.02);
     }
   </style>
 </head>
@@ -508,12 +520,6 @@
 
   <div id="copyFailMessage">
     Không thể sao chép. Trình duyệt không hỗ trợ hoặc có lỗi!
-  </div>
-
-  <div id="messageContainer">
-    <div id="welcomeMessage">Chào mừng bạn!</div>
-    <div id="copyMessage">Đã sao chép!</div>
-    <div id="copyFailMessage">Không thể sao chép!</div>
   </div>
 </body>
 </html>
