--- a/index.html
+++ b/index.html
@@ -330,6 +330,10 @@
       visibility: visible;
       transform: translateX(-50%) scale(1.02);
     }
+
+    body {
+      overflow-x: hidden;
+    }
   </style>
 </head>
 <body>
