--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Chuyển Văn Bản Thành Giọng Nói - Nhật Đăng</title>
   <style>
+    html, body {
+      overflow-x: hidden;
+    }
+
     @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
 
     * {
@@ -329,10 +333,6 @@
       opacity: 1;
       visibility: visible;
       transform: translateX(-50%) scale(1.02);
-    }
-
-    body {
-      overflow-x: hidden;
     }
   </style>
 </head>
